--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,14 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Get Build Version
-      run: |
-        Import-Module .\build\GetBuildVersion.psm1
-        Write-Host $Env:GITHUB_REF
-        $version = GetBuildVersion -VersionString $Env:GITHUB_REF
-        echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
-      shell: pwsh
       
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
@@ -37,7 +29,7 @@ jobs:
       run: dotnet restore $PROJECT
       
     - name: Build
-      run: dotnet build $PROJECT --configuration Release -p:Version=$BUILD_VERSION --no-restore
+      run: dotnet build $PROJECT --configuration Release  --no-restore
 
     - name: Publish
       if: startsWith(github.ref, 'refs/heads/release')
