--- a/src/Mapbox.AspNetCore/Mapbox.AspNetCore.csproj
+++ b/src/Mapbox.AspNetCore/Mapbox.AspNetCore.csproj
@@ -9,6 +9,7 @@
     <Description></Description>
     <PackageProjectUrl>https://github.com/phsoftware/Mapbox.AspNetCore</PackageProjectUrl>
     <RepositoryUrl>https://github.com/phsoftware/Mapbox.AspNetCore</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
