--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,4 +32,4 @@ jobs:
       run: dotnet build $PROJECT --configuration Release  --no-restore
 
     - name: Publish
-      run: dotnet nuget push **\*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source "github" --skip-duplicate
+      run: dotnet nuget push **\*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://nuget.pkg.github.com/${{ github.repository_owner }} --skip-duplicate
