--- a/src/Mapbox.AspNetCore/Mapbox.AspNetCore.csproj
+++ b/src/Mapbox.AspNetCore/Mapbox.AspNetCore.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>0.2.0.0</Version>
+		<Version>0.2.0.1</Version>
 		<Authors>Pierre-Henri Nogues</Authors>
 		<Company>PierreHenri.fr</Company>
 		<Description>Library for interfacing with mapbox api</Description>
@@ -11,9 +11,14 @@
 		<RepositoryUrl>https://github.com/phsoftware/Mapbox.AspNetCore</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="../../icon.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 		<None Include="../../README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
